--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,1 +1,21 @@
 <h1 class='title'>Note </h1>
+
+
+<div class="section">
+	<div class="container">
+		<% @notes.each do |note| %>
+			<div class="card">
+		  <div class="card-content">
+		    <div class="media">
+		      <div class="media-content">
+		        <p class="title is-4"><%= link_to note.title, note  %></p>
+		      </div>
+		    </div>
+		    <div class="content">
+		     	<%= note.content %>
+		    </div>
+		  </div>
+		</div>
+		<% end %>
+	</div>
+</div>
