--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -5,6 +5,7 @@
   <a href="https://stackoverflow.com/"><li>Stack Overflow </li></a>
   <a href="https://www.codewars.com/"><li>Code Wars</li></a>
   <a href="/notes"><li>Notes </li></a>
+  <a href="/thatlabs"><li>thatLAB</li></a>
   <a href="/flashcards"><li>Flashcards</li></a>
   <a href="https://www.twitter.com/"><li>Twitter</li></a>
   <a href="https://www.slack.com/"><li>Slack</li></a>
