--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,18 +6,22 @@
 <br>
 <br>
 
+<% if @answers != nil %>
+  <% @answers.each do |answer| %>
+  <ul>
+    <li><%= answer.answer_content %></li>
+    <br>
+    <br>
+  </ul>
+  <% end %>
+  <% end %>
+
+
 <%= form_tag("/saveanswer/#{@question.id}") do %>
   <p>
     <%= label_tag "Your answer:" %>
     <br>
-    <%= text_area_tag "answer_content", nil, rows: 20, cols: 45 %>
+    <%= text_area_tag "answer_content", nil, rows: 10, cols: 55 %>
   </p>
-  <%= submit_tag "Submit" %>
+  <%= submit_tag "Submit Answer" %>
 <% end %>
-
-
-<% if @answers != nil %>
-  <% @answers.each do |answer| %>
-  <%= answer.answer_content %>
-  <% end %>
-  <% end %>
