--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -9,5 +9,6 @@
   </div>
     <%= link_to "Edit", edit_note_path(@note), class:"button" %>
     <%= link_to "Delete", note_path(@note), method: :delete, data: {confirm: "Aare you sure?"}, class: "button is-danger" %>
+    <%= link_to "New Note", new_note_path, class:"button" %>
 
 </section>
