--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,10 @@
+<% flash.each do |type, notice| %>
+  <div class="alert alert-success" role="alert">
+    <strong><%= notice %></strong>
+  </div>
+<% end %>
+
+
 <strong><h1><%= @question.question_title %></h1></strong>
 <em><h2><%= @question.lab %></h2></em>
 <br>
