--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
     <%= label_tag "Username:" %>
     <%= text_field_tag "username" %>
     <%= label_tag "Password:" %>
-    <%= text_field_tag "password" %>
+    <%= password_field_tag "password" %>
   </p>
   <%= submit_tag "Register" %>
 <% end %>
