--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,4 +11,9 @@
   <body>
     <%= yield %>
   </body>
+  <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+   <div class="container text-center">
+     <small>Copyright &copy; Devtop | Created by: <a href="https://github.com/micahbowie">Micah Bowie</a></small>
+   </div>
+ </footer>
 </html>
