--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,9 +1,11 @@
+<div class="jumbotron-container">
 <div class="jumbotron">
   <h1 class="display-4">Hello, <%= @user.username %>!</h1>
   <p class="lead">Welcome back to Devtop. Try the new "thatLAB" app. Ask and answer questions about labs that you are having trouble with.</p>
   <hr class="my-4">
   <p>Join the community of Flatiron students present and past. Get your questions answered.</p>
   <a class="btn btn-primary btn-lg" href="/thatlabs" role="button">thatLAB</a>
+</div>
 </div>
 
 <% flash.each do |type, notice| %>
@@ -12,7 +14,66 @@
   </div>
 <% end %>
 
-<h3>Pick an app</h3>
+
+<div class="app-container">
+    <h1>Apps</h1>
+    <em><p>Here are some of the essentials and most popular tools for a devloper. Pick an app to get started!</p></em>
+    <br>
+    <div class="card">
+    <div class="card-body">
+    <div class="app-row-1">
+        <a href="https://www.codewars.com/">
+            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-5/24/codewars-512.png" alt="Codewars" style="width:100px;height:100px;">
+        </a>
+
+        <a href="https://www.github.com/">
+            <img src="https://cdn1.iconfinder.com/data/icons/social-media-vol-1-1/24/_github-512.png" alt="GitHub" style="width:100px;height:100px;">
+        </a>
+
+        <a href="https://www.twitter.com/">
+            <img src="https://cdn2.iconfinder.com/data/icons/social-media-solid-2/32/Twitter-512.png" alt="Twitter" style="width:100px;height:100px;">
+        </a>
+
+        <a href="https://www.rubyguides.com/">
+            <img src="https://cdn3.iconfinder.com/data/icons/sympletts-free-sampler/128/diamond-512.png" alt="RubyGuides" style="width:100px;height:100px;">
+        </a>
+
+    </div>
+
+
+    <div class="app-row-2">
+        <a href="https://www.codepen.io/">
+            <img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/Codepen-512.png" alt="Codepen" style="width:100px;height:100px;">
+        </a>
+        <a href="/notes">
+            <img src="https://cdn4.iconfinder.com/data/icons/education-and-school-glyph-24-px/24/Notebook_notepad_notes_scratch_pad_writing_pad-512.png" alt="Notes" style="width:100px;height:100px;">
+        </a>
+        <a href="https://guides.rubyonrails.org/">
+            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-5/24/rails-512.png" alt="RailsGuide" style="width:100px;height:100px;">
+        </a>
+
+        <a href="https://www.slack.com/">
+            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-5/24/slack-512.png" alt="Slack" style="width:100px;height:100px;">
+        </a>
+
+    </div>
+
+
+    <div class="app-row-2">
+        <a href="https://stackoverflow.com">
+            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-5/24/stackoverflow-512.png" alt="StackOverflow" style="width:100px;height:100px;">
+        </a>
+        <a href="https://learn.co">
+            <img src="https://avatars1.githubusercontent.com/u/10897717?s=200&v=4" alt="Learn.co" style="width:100px;height:100px;">
+        </a>
+
+    </div>
+    </div>
+    </div>
+</div>
+
+
+<!-- <h3>Pick an app</h3>
 <ul>
   <a href="https://stackoverflow.com/" target="_blank"><li>Stack Overflow </li></a>
   <a href="https://www.codewars.com/" target="_blank"><li>Code Wars</li></a>
@@ -27,4 +88,4 @@
   <a href="https://www.codepen.io/" target="_blank"><li>Codepen</li></a>
 </ul>
 
-<%= link_to "Logout", logout_path, class:"btn btn-dark"%>
+<%= link_to "Logout", logout_path, class:"btn btn-dark"%> -->
