--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   </head>
+  <ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="/devtop">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="">|</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/logout">Lougout</a>
+  </li>
+</ul>
+
   <body>
     <%= yield %>
   </body>
