Changes to dashboard,added boostrap to question form, changed search

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -28,3 +28,15 @@
   -o-transform: skew(8deg) rotate(3deg);
   transform: skew(8deg) rotate(3deg);
 }
+
+
+
+.question-container {
+
+width: 80%;
+margin:auto;
+}
+
+.question-container h1{
+  text-align: center;
+}
