--- a/app/assets/stylesheets/thatlabs.scss
+++ b/app/assets/stylesheets/thatlabs.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the thatlabs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.list-container {
+  width: 90%;
+  background-color: #D3D3D3;
+}
