changed devtop icons, styled register, styled answer section

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -5,6 +5,17 @@
     <strong><%= notice %></strong>
   </div>
 <% end %>
+<br>
+<br>
+<div class="jumbotron-container">
+<div class="jumbotron">
+  <h1 class="display-4">Hello, <%= @user.username %>!</h1>
+  <p class="lead">Welcome back to Devtop. Try the new "thatLAB" app. Ask and answer questions about labs that you are having trouble with.</p>
+  <hr class="my-4">
+  <p>Join the community of Flatiron students present and past. Get your questions answered.</p>
+  <a class="btn btn-primary btn-lg" href="/thatlabs" role="button">thatLAB</a>
+</div>
+</div>
 
 
 <div class="app-container">
@@ -15,19 +26,19 @@
     <div class="card-body">
     <div class="app-row-1">
         <a href="https://www.codewars.com/">
-            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-5/24/codewars-512.png" alt="Codewars" style="width:100px;height:100px;">
+            <img src="https://camo.githubusercontent.com/c6341567c3ede1b4ee0935509a378c482153026f/687474703a2f2f7777772e736f66746c61622e6e7475612e67722f7e6e69636b69652f696d616765732f6c6f676f2f636f6465776172732e706e67" alt="Codewars" style="width:100px;height:100px;">
         </a>
 
         <a href="https://www.github.com/">
-            <img src="https://cdn1.iconfinder.com/data/icons/social-media-vol-1-1/24/_github-512.png" alt="GitHub" style="width:100px;height:100px;">
+            <img src="https://cdn0.iconfinder.com/data/icons/free-social-media-15/32/github_social_media-512.png" alt="GitHub" style="width:100px;height:100px;">
         </a>
 
         <a href="https://www.twitter.com/">
-            <img src="https://cdn2.iconfinder.com/data/icons/social-media-solid-2/32/Twitter-512.png" alt="Twitter" style="width:100px;height:100px;">
+            <img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Twitter3_colored_svg-512.png" alt="Twitter" style="width:100px;height:100px;">
         </a>
 
         <a href="https://www.rubyguides.com/">
-            <img src="https://cdn3.iconfinder.com/data/icons/sympletts-free-sampler/128/diamond-512.png" alt="RubyGuides" style="width:100px;height:100px;">
+            <img src="https://cdn0.iconfinder.com/data/icons/long-shadow-web-icons/512/ruby-512.png" alt="RubyGuides" style="width:100px;height:100px;">
         </a>
 
     </div>
@@ -35,17 +46,17 @@
 
     <div class="app-row-2">
         <a href="https://www.codepen.io/">
-            <img src="https://cdn3.iconfinder.com/data/icons/social-rounded-2/72/Codepen-512.png" alt="Codepen" style="width:100px;height:100px;">
+            <img src="https://cdn0.iconfinder.com/data/icons/social-36/66/49-512.png" alt="Codepen" style="width:100px;height:100px;">
         </a>
         <a href="/notes">
-            <img src="https://cdn4.iconfinder.com/data/icons/education-and-school-glyph-24-px/24/Notebook_notepad_notes_scratch_pad_writing_pad-512.png" alt="Notes" style="width:100px;height:100px;">
+            <img src="https://cdn2.iconfinder.com/data/icons/random-set-1/424/Asset_89-512.png" alt="Notes" style="width:100px;height:100px;">
         </a>
         <a href="https://guides.rubyonrails.org/">
-            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-5/24/rails-512.png" alt="RailsGuide" style="width:100px;height:100px;">
+            <img src="https://cdn3.iconfinder.com/data/icons/popular-services-brands-vol-2/512/ruby-on-rails-512.png" alt="RailsGuide" style="width:100px;height:100px;">
         </a>
 
         <a href="https://www.slack.com/">
-            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-5/24/slack-512.png" alt="Slack" style="width:100px;height:100px;">
+            <img src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Slack_colored_svg-512.png" alt="Slack" style="width:100px;height:100px;">
         </a>
 
     </div>
@@ -53,24 +64,16 @@
 
     <div class="app-row-2">
         <a href="https://stackoverflow.com">
-            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-5/24/stackoverflow-512.png" alt="StackOverflow" style="width:100px;height:100px;">
+            <img src="https://cdn2.iconfinder.com/data/icons/social-icons-color/512/stackoverflow-512.png" alt="StackOverflow" style="width:100px;height:100px;">
         </a>
         <a href="https://learn.co">
             <img src="https://avatars1.githubusercontent.com/u/10897717?s=200&v=4" alt="Learn.co" style="width:100px;height:100px;">
         </a>
+        <a href="/thatlabs">
+            <img src="https://cdn2.iconfinder.com/data/icons/metro-ui-dock/512/L.png" alt="thatLAB" style="width:100px;height:100px;">
+        </a>
 
     </div>
     </div>
     </div>
-</div>
-
-
-<div class="jumbotron-container">
-<div class="jumbotron">
-  <h1 class="display-4">Hello, <%= @user.username %>!</h1>
-  <p class="lead">Welcome back to Devtop. Try the new "thatLAB" app. Ask and answer questions about labs that you are having trouble with.</p>
-  <hr class="my-4">
-  <p>Join the community of Flatiron students present and past. Get your questions answered.</p>
-  <a class="btn btn-primary btn-lg" href="/thatlabs" role="button">thatLAB</a>
-</div>
 </div>
