--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -4,7 +4,7 @@
 <div class="question-container">
   <strong><h1>Ask your question</h1></strong>
   <br>
-  <input class="form-control" type="text" placeholder="When entering a lab name please copy and paste the exact repo name from github.  Example: rails-form_tag-readme-onl01-seng-pt-061520 " readonly>
+  <input class="form-control" type="text" placeholder="When entering a lab name please copy and paste the exact repo name from github.  Example: rails-form_tag-readme. The '-onl01-seng-pt-061520' part is not neccessary." readonly>
   <br>
   <form action="/questions" method="post">
     <input type="hidden" name="authenticity_token" value="PSQFoBwzsrzv8ZJYtDOE5iPKJJmn3N/4GyOo2lovc9T8l68aPSbABRMoky784CpPA+7nGhBcZj0/oPMWLLwa/Q==">
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group col-md-6">
         <label for="exampleFormControlInput1">Question</label>
-        <input type="text" name="question_title" class="form-control" id="exampleFormControlInput1" placeholder="How do yo add an input?">
+        <input type="text" name="question_title" class="form-control" id="exampleFormControlInput1" placeholder="How do yo add an input field?">
       </div>
     </div>
     <div class="form-group">
