--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,9 @@
+<head>
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+</head>
+
 <% flash.each do |type, notice| %>
   <div class="alert alert-success" role="alert">
     <strong><%= notice %></strong>
@@ -33,11 +39,17 @@
        <% end %>
 
 
-<%= form_tag("/saveanswer/#{@question.id}") do %>
-  <p>
-    <%= label_tag "Your answer:" %>
-    <br>
-    <%= text_area_tag "answer_content", nil, rows: 10, cols: 55 %>
-  </p>
-  <%= submit_tag "Submit Answer" %>
-<% end %>
+<div class="container">
+	<div class="row">
+		<div class="span10 well" style="padding-bottom:0">
+            <form accept-charset="UTF-8" action="/saveanswer/#{@question.id}" method="POST">
+              <input type="hidden" name="authenticity_token" value="cP5cLA3RElCDN+wv8/gQtMcSsXVUZuH4VxHHquY/QS6Pp43xmxF6BlscbdEt/2JHOMNM10pyIo1NPrjRCt6+gw==">
+                <textarea class="span9" id="new_message" name="answer_content"
+                placeholder="Type in your message" rows="8"></textarea>
+                <br>
+                <br>
+                <button class="btn btn-info" type="submit">Submit Answer</button>
+            </form>
+        </div>
+	</div>
+</div>
