--- a/app/views/thatlabs/find.html.erb
+++ b/app/views/thatlabs/find.html.erb
@@ -14,15 +14,19 @@
   <% else %>
   <% @questions.each do |question| %>
     <br>
-    <div class="list-container">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-          <h3><a href="/questions/<%= question.id %>"><%= question.question_title %></a></h3>
-          <strong><%= question.lab %></strong>
-          <p><%= question.question_content %></p>
-        </li>
-      </ul>
+    <ul>
+      <li>
+    <div class="span8">
+      <h1><a href="/questions/<%= question.id %>"><%= question.question_title %></a></h1>
+      <strong><%= question.lab %></strong>
+      <p><%= question.question_content %></p>
+      <div>
+          <span class="badge badge-success">Answered by:<%= question.user.username %></span><div class="pull-right"><span class="label"><%= question.lab %></span></div>
+      </div>
+      <hr>
     </div>
+    </li>
+    </ul>
   <br>
   <% end %>
   <% end %>
