--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,17 +1,63 @@
-<h1 class='title'>Edit Note</h1>
 
-<div class="section">
-  <%= simple_form_for @note do |x| %>
-  <div class="field">
-    <div class="control">
-      <%= x.input :title, input_html: { class: 'input'}, wrapper: false, label_html: { class: 'label'} %>
+
+<style>
+  #new-note{
+    margin: 450px;
+    width: 45%;
+    padding: 0.1px;
+    margin-top: 15px;
+  }
+  #new-note ul li a{
+    text-decoration:none;
+    color:#000;
+    background:#FCFF4B;
+    display:block;
+    overflow:auto;
+    height:45em;
+    width:35em;
+    padding:1.3em;
+  }
+  #create input {
+ background-color:#FFF;
+ min-height:40px;
+ width:515px;
+ font-size:14pt;
+ margin-bottom: 30px;
+ padding: 40;
+ border-radius: 10px;
+ background:rgba(255,255,255,1.0);
+ border:none;
+}
+#newnote {
+ margin-top: 1px;
+ background:rgba(255,255,255,1.0);
+ border:none;
+}
+#new-note-submit {
+ margin-top: 13px;
+ width:100px;
+}
+</style>
+
+<br>
+<br>
+<div id="new-note">
+  <body>
+    <h1>Make changes</h1>
+        <ul>
+          <li>
+            <a>
+              <div id="create">
+              <form action="/notes/<%= @note.id %>" method="post">
+                <input type="hidden" name="_method" value="PATCH">
+                <input type="text" name="title"  value="<%= @note.title%>">
+                <input type="hidden" name="authenticity_token" value="gHOWhu79yA+zkjkGc9iou/KWwC/jYb4Jr6YM3TBWIbvXZsVKKTyaEBqiygiJapw3c/qdyESkAxsfhKlv2t3dUQ==">
+                <textarea id="newnote" name="content"rows="20" cols="70" palaceholder="Jot it down.."><%= @note.content %></textarea>
+                <input id="new-note-submit" type="submit">
+              </form>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </<body>
     </div>
-  </div>
-  <div class="field">
-    <div class="control">
-      <%= x.input :content, input_html: { class: 'textarea'}, wrapper: false, label_html: { class: 'label'} %>
-    </div>
-  </div>
-  <%= x.button :submit, class: "button is-primary" %>
-  <% end %>
-</div>
