--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -11,16 +11,16 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="exampleFormControlInput1">Lab</label>
-        <input type="text" name="lab" class="form-control" id="exampleFormControlInput1" placeholder="rails-form_tag-readme-onl01-seng-pt-061520">
+        <input type="text" name="lab" class="form-control" id="exampleFormControlInput1" placeholder="rails-form_tag-readme-onl01-seng-pt-061520" required>
       </div>
       <div class="form-group col-md-6">
         <label for="exampleFormControlInput1">Question</label>
-        <input type="text" name="question_title" class="form-control" id="exampleFormControlInput1" placeholder="How do yo add an input field?">
+        <input type="text" name="question_title" class="form-control" id="exampleFormControlInput1" placeholder="How do yo add an input field?" required>
       </div>
     </div>
     <div class="form-group">
       <label for="exampleFormControlTextarea1">Explain what is going on:</label>
-      <textarea class="form-control" name="question_content"  id="exampleFormControlTextarea1" rows="4"></textarea>
+      <textarea class="form-control" name="question_content"  id="exampleFormControlTextarea1" rows="4" required></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
