--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,46 @@
+<style>
+  .login,
+.image {
+  min-height: 100vh;
+}
 
-<div class="welcome-container">
-  <h1>Welcome to Devtop</h1>
-</div>
+.bg-image {
+  background-image: url('https://images.unsplash.com/photo-1522124624696-7ea32eb9592c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');
+  background-size: cover;
+  background-position: center center;
+}
+</style>
+<div class="container-fluid">
+    <div class="row no-gutter">
+        <div class="col-md-6 d-none d-md-flex bg-image"></div>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin my-5">
-          <div class="card-body">
-            <h5 class="card-title text-center">Register</h5>
-            <form class="form-signin" action="/sessions" method="post">
-              <input type="hidden" name="authenticity_token" value="Hr5osOMNkl4ijzYY8PngOCmZIpE/poNs8FmKZSNqJ4HfDcIKwhjg595WN264Kk6RCb3hEogmOqnU2tGpVflOqA==">
-              <div class="form-label-group">
-                <input type="text" name="username" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
-                <label for="inputEmail">Username</label>
-              </div>
 
-              <div class="form-label-group">
-                <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                <label for="inputPassword">Password</label>
-              </div>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Register</button>
-              <hr class="my-4">
-            </form>
-            <a class="nav-link" href="/login">Sign In</a>
-          </div>
+
+        <div class="col-md-6 bg-light">
+            <div class="login d-flex align-items-center py-5">
+
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-10 col-xl-7 mx-auto">
+                            <h3 class="display-4">Devtop</h3>
+                            <p class="text-muted mb-4">Sign Up</p>
+                            <form action="/users" method="post">
+                                <div class="form-group mb-3">
+                                    <input type="hidden" name="authenticity_token" value="Hr5osOMNkl4ijzYY8PngOCmZIpE/poNs8FmKZSNqJ4HfDcIKwhjg595WN264Kk6RCb3hEogmOqnU2tGpVflOqA==">                                    <input id="inputEmail" name="username" placeholder="Username" required="" autofocus="" class="form-control rounded-pill border-0 shadow-sm px-4">
+                                </div>
+                                <div class="form-group mb-3">
+                                    <input id="inputPassword" type="password" name="password" placeholder="Password" required="" class="form-control rounded-pill border-0 shadow-sm px-4 text-primary">
+                                </div>
+                                <button type="submit" class="btn btn-primary btn-block text-uppercase mb-2 rounded-pill shadow-sm">Sign Up!</button>
+                            </form>
+                            <a href="/login">Already have an account?</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-      </div>
+
     </div>
-  </div>
-  <br>
-  <br>
+</div>
