Fixed error page, updated notes logic, added no_notes view

--- a/app/views/notes/no_notes.html.erb
+++ b/app/views/notes/no_notes.html.erb
@@ -35,14 +35,15 @@
 <br>
 <br>
 <div class="error-404">
-    <div class="error-code m-b-10 m-t-20">404 <i class="fa fa-warning"></i></div>
-    <h2 class="font-bold">Oops 404! That page can’t be found.</h2>
-
+    <div class="error-code m-b-10 m-t-20">No notes<i class="fa fa-warning"></i></div>
+    <h2 class="font-bold">This is where all of your saved notes will live.</h2>
+      <img src="https://media.giphy.com/media/l2SqhNnGa9zkZuu3K/giphy.gif" alt="no notes.">
     <div class="error-desc">
-        Sorry, but the page you are looking for was either not found or does not exist. <br/>
-        Try refreshing the page or click the button below to go back to the Homepage.
+        You haven't created any notes... <br>
+        Use the link below to start creating a new note. <br/>
+        You can also use the "new note" button in the navigation bar.
         <div><br/>
-            <a href="/devtop" class="btn btn-primary"><span class="glyphicon glyphicon-home"></span> Go back to Devtop</a>
+            <a href="/notes/new" class="btn btn-primary"><span class="glyphicon glyphicon-home"></span> Create a new Note</a>
         </div>
     </div>
 </div>
