Updated views for questions, answers, and thatlab. added dynamic image

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,7 +1,7 @@
 <br>
 <br>
 <br>
-<div class="question-container">
+<div class="ask-container">
   <strong><h1>Ask your question</h1></strong>
   <br>
   <input class="form-control" type="text" placeholder="When entering a lab name please copy and paste the exact repo name from github.  Example: rails-form_tag-readme. The '-onl01-seng-pt-061520' part is not neccessary." readonly>
