--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,6 +2,15 @@
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+        crossorigin="anonymous">
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </head>
 
 <% flash.each do |type, notice| %>
@@ -9,19 +18,53 @@
     <strong><%= notice %></strong>
   </div>
 <% end %>
+<style>
+body {
+  background-image: url("https://rb.gy/wvhfcg");
+   background-color: #cccccc;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
 
-<article class="message is-dark">
-  <div class="message-body">
-  <strong>  <%= @question.question_title %></strong>
-  <br>
-    <p><%= @question.question_content %></p>
-    <br>
-    <em><%= @question.lab %></em>
-</article>
+</style>
+<br>
+<div class="thatlab-container">
+  <a href="/thatlabs">
+  <%= image_tag 'thatlab.png' %>
+  </a>
+  <h4>Ask questions. Find answers. Finish that lab.</h4>
+</div>
 
 
+<br>
+<br>
+<br>
+<div class="question-container">
+<div class="card gedf-card">
+    <div class="card-header">
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="ml-2">
+           <div class="h5 m-0"> <%= @question.question_title %></div>
+           <div class="h7 text-muted">Asked by, <%= @question.user.username %></div>
+          </div>
+        </div>
+       </div>
+      </div>
+          <div class="card-body">
+          <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>10 min ago</div>
+              <h5 class="card-title"><%= @question.lab %></h5>
+                <p class="card-text"> <%= @question.question_content %></p>
+          </div>
+          </div>
+
+<hr class="my-3"/>
+
+<ul class="timeline">
 <% if @answers != nil %>
   <% @answers.each do |answer| %>
+  <li>
   <div class=".d-sm-flex p-2 bd-highlight">
   <div class="list-group">
       <a class="list-group-item list-group-item-action">
@@ -37,19 +80,14 @@
        </div>
        <% end %>
        <% end %>
+      </li>
+      </ul>
 
 
-<div class="container">
-	<div class="row">
-		<div class="span10 well" style="padding-bottom:0">
-            <form accept-charset="UTF-8" action="/saveanswer/#{@question.id}" method="POST">
-              <input type="hidden" name="authenticity_token" value="cP5cLA3RElCDN+wv8/gQtMcSsXVUZuH4VxHHquY/QS6Pp43xmxF6BlscbdEt/2JHOMNM10pyIo1NPrjRCt6+gw==">
-                <textarea class="span9" id="new_message" name="answer_content"
-                placeholder="Type in your message" rows="8"></textarea>
-                <br>
-                <br>
-                <button class="btn btn-info" type="submit">Submit Answer</button>
-            </form>
-        </div>
-	</div>
+
+    <form accept-charset="UTF-8" action="/saveanswer/<%= @question.id %>" method="POST">
+       <input type="hidden" name="authenticity_token" value="cP5cLA3RElCDN+wv8/gQtMcSsXVUZuH4VxHHquY/QS6Pp43xmxF6BlscbdEt/2JHOMNM10pyIo1NPrjRCt6+gw==">
+         <textarea class="span10" id="new_message" name="answer_content"placeholder="Type in your answer" rows="8"></textarea>
+          <button class="btn btn-info" type="submit">Submit Answer</button>
+     </form>
 </div>
