--- a/app/views/thatlabs/find.html.erb
+++ b/app/views/thatlabs/find.html.erb
@@ -1,13 +1,20 @@
+<style>
+  .result-container{
+  width: 90%;
+  margin: auto;
+  padding: 5px, 20px;
+}
+</style>
+
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand">Find by Lab</a>
+  <a href="/thatlabs"class="navbar-brand">THAT LAB</a>
   <form class="form-inline" action="/thatlab" method= "get">
     <input class="form-control mr-sm-2" name="search" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Find</button>
   </form>
 </nav>
 <br>
 <br>
-
 
 <% if @questions == nil %>
   <% redirect_to error_path %>
@@ -16,15 +23,16 @@
     <br>
     <ul>
       <li>
-    <div class="span8">
-      <h1><a href="/questions/<%= question.id %>"><%= question.question_title %></a></h1>
-      <strong><%= question.lab %></strong>
-      <p><%= question.question_content %></p>
-      <div>
-          <span class="badge badge-success">Answered by:<%= question.user.username %></span><div class="pull-right"><span class="label"><%= question.lab %></span></div>
-      </div>
-      <hr>
-    </div>
+        <div class="result-container">
+        <div class="col-xs-12 col-sm-12 col-md-7 excerpet">
+        				<h3><a href="/questions/<%= question.id %>"><%= question.question_title %></a></h3>
+                <span class="badge badge-secondary">Lab: <%= question.lab %></span>
+                <p><%= question.question_content %></p>
+                <span class="plus"><a href="#" title="Lorem ipsum"><i class="glyphicon glyphicon-plus"></i></a></span>
+        			</div>
+        			<span class="clearfix borda"></span>
+        <hr>
+        </div>
     </li>
     </ul>
   <br>
